--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ Default: 1
 -Primary: #e67e22
 
 
--Tints:
+-Tints: #fadbc1
 
 
 -Shades:
@@ -28,6 +28,7 @@ Default: 1
 
 -Greys:
 #555
+#333
 
 
 --- 05 SHADOWS
@@ -51,9 +52,90 @@ Default: 1
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     font-family: sans-serif;
     line-height: 1;
     font-weight: 400;
     color: #555;
+}
+
+.section-hero {
+    background-color: #fadbc1;
+    padding: 9.9rem 0;
+}
+
+.hero {
+    max-width: 130rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9.6rem;
+    align-items: center;
+}
+
+.heading-primary {
+    font-size: 5.2rem;
+    font-weight: 700;
+    line-height: 1.05;
+    color: #333;
+    letter-spacing: -0.5px;
+    margin-bottom: 3.2rem;
+}
+
+.hero-description {
+    font-size: 2.0rem;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
+}
+
+.btn:link, 
+.btn:visited {
+    display: inline-block;
+    
+    font-size: 2rem;
+    text-decoration: none;
+    padding: 1.6rem 3.2rem;
+    border-radius: 9px;
+
+    /* Put transition on original "state" */
+    transition: background-color 0.3s;
+}
+
+
+.btn--full:link, 
+.btn--full:visited {
+    background-color: #e67e22;  
+    color: #fff; 
+}
+
+.btn--full:hover, 
+.btn--full:active {
+    background-color: #cf711f;  
+}
+
+.btn--outline:link, 
+.btn--outline:visited {
+    background-color: #fff;   
+    color: #555;
+}
+
+.btn--outline:hover, 
+.btn--outline:active {
+    background-color: #fadbc1;
+    
+    /* trick to add border inside */
+    box-shadow: inset 0 0 0 3px #fff;
+}
+
+
+.hero-img {
+    width: 100%;
+}
+
+.margin-right-sm {
+    margin-right: 1.6rem !important;
 }
