hero section part 3 finished

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Rubik", sans-serif;
     line-height: 1;
     font-weight: 400;
     color: #555;
@@ -97,6 +97,7 @@ body {
     display: inline-block;
     
     font-size: 2rem;
+    font-weight: 600;
     text-decoration: none;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
@@ -138,4 +139,37 @@ body {
 
 .margin-right-sm {
     margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top: 8rem;
+}
+
+.delivered-img {
+    display: flex;
+}
+
+.delivered-img img {
+    height: 4.8rem;
+    width: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fadbc1;
+}
+
+.delivered-img img:last-child {
+    margin: 0;
+}
+
+.delivered-text {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.delivered-text span {
+    color: #e67e22;
+    font-weight: 700;
 }
