--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,30 @@ body {
 /* GENERAL REUSABLE COMPONENTS */
 /***********************************************/
 
+.container {
+    max-width: 120rem;
+    padding: 0 3.2rem;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    gap: 9.6rem;
+}
+
+.grid--2-cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+
 .heading-primary {
     font-size: 5.2rem;
     font-weight: 700;
@@ -121,6 +145,10 @@ body {
     
     /* trick to add border inside */
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+    margin-right: 1.6rem !important;
 }
 
 
@@ -226,10 +254,6 @@ body {
 }
 
 
-.margin-right-sm {
-    margin-right: 1.6rem !important;
-}
-
 .delivered-meals {
     display: flex;
     align-items: center;
@@ -262,3 +286,15 @@ body {
     color: #e67e22;
     font-weight: 700;
 }
+
+
+
+/***********************************************/
+/* HOW IT WORKS SECTION */
+/***********************************************/
+
+.section-how {
+    padding:9.6rem 0;
+    background-color: orangered;
+}
+
