--- a/css/general.css
+++ b/css/general.css
@@ -30,6 +30,10 @@ Paragraph default: 1.6
 
 -Tints: #fadbc1
         #ffc18a
+        #51cf66
+        #94d82d
+        #ffd43b
+
 
 -Shades:
 
@@ -40,6 +44,7 @@ Paragraph default: 1.6
 -Greys:
 #555
 #333
+#888
 
 
 --- 05 SHADOWS
@@ -48,6 +53,7 @@ Paragraph default: 1.6
 --- 06 BORDER-RADIUS
 
 Default: 9px
+Medium: 11px
 
 
 --- 07 WHITESPACE
@@ -155,7 +161,8 @@ body {
     border-radius: 9px;
 
     /* Put transition on original "state" */
-    transition: background-color 0.3s;
+    /* transition: background-color 0.3s; */
+    transition: all 0.3s;
 }
 
 
@@ -184,6 +191,36 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+}
+
+
+/* HELPER/SETTINGS CLASSES */
+
 .margin-right-sm {
     margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+    margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+    text-align: center;
+}
+
+strong {
+    font-weight: 500;
 }
