meals, testimonials and pricing parts

--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,7 @@ Paragraph default: 1.6
 
 
 -Greys:
+#6f6f6f (lightest grey allowed on #fadbc1)
 #555
 #333
 #888
@@ -204,6 +205,26 @@ body {
 .link:active {
     color: #cf711f;
     border-bottom: 1px solid transparent;
+}
+
+
+.list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.list-item {
+    font-size: 1.8rem;
+    display: flex;
+    gap: 1.6rem;
+}
+
+.list-icon {
+    width: 3rem;
+    height: 3rem;
+    color: #e67e22;
 }
 
 
