--- a/css/style.css
+++ b/css/style.css
@@ -319,22 +319,146 @@
     font-size: 1.8rem;
 }
 
-.list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
+
+
+/***********************************************/
+/* TESTIMONIALS SECTION */
+/***********************************************/
+
+.section-testimonials {
+    background-color: #fadbc1;
+    display: grid;
+    grid-template-columns: 55fr 45fr;
+    align-items: center;
 }
 
-.list-item {
+.testimonials {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 4.8rem;
+    column-gap: 8rem;
+}
+
+.testimonials-container {
+     padding:  9.6rem;
+}
+
+.testimonial-img {
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
     font-size: 1.8rem;
-    display: flex;
+    line-height: 1.8;
+    margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+    font-size: 1.6rem;
+    color: #6f6f6f;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.6rem;
+    padding: 1.6rem;
 }
 
-.list-icon {
-    width: 3rem;
-    height: 3rem;
-    color: #e67e22;
+.gallery-item {
+    overflow: hidden;
 }
 
+.gallery-item img {
+    display: block;
+    width: 100%;
+    transition: all 0.4s;
+}
+
+.gallery-item img:hover {
+    transform: scale(1.1);
+}
+
+
+/***********************************************/
+/* PRICING SECTION */
+/***********************************************/
+
+.section-pricing {
+    padding:9.6rem 0;
+}
+
+.pricing-plan {
+    border-radius: 11px;
+    width: 74%;
+}
+
+.pricing-plan--starter {
+    justify-self: end;
+    border: 2px solid #fadbc1;
+    padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+    background-color: #fadbc1;
+    padding: 4.8rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+    content: "Best Value";
+    position: absolute;
+    top: 6%;
+    right: -19%;
+
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
+    background-color: #ffd43b;
+    padding: 0.8rem;
+    padding: 0.8rem 8rem;
+    transform: rotate(45deg);
+
+}
+
+.plan-header {
+    text-align: center;
+    margin-bottom: 4.8rem;
+}
+
+.plan-name {
+    color: #cf711f;
+    font-weight: 600;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75;
+    margin-bottom: 3.2rem;
+}
+
+.plan-price {
+    font-size: 6.2rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-right: 0.8rem;
+}
+
+.plan-text {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    color: #6f6f6f;
+
+}
+
+.plan-sign-up {
+   text-align: center;
+   margin-top: 4.8rem; 
+}
