--- a/css/general.css
+++ b/css/general.css
@@ -97,6 +97,16 @@ body {
     display: grid;
     column-gap: 6.4rem;
     gap: 9.6rem;
+
+    margin-bottom: 9.6rem;
+}
+
+/* .grid:last-child {
+    margin-bottom: 0;
+}*/
+
+.grid:not(:last-child) {
+    margin-bottom: 9.6rem;
 }
 
 .grid--2-cols {
