--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,66 @@
    text-align: center;
    margin-top: 4.8rem; 
 }
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    text-align: center;
+}
+
+.feature-icon {
+    color: #e67e22;
+    height: 3.2rem;
+    width: 3.2rem;
+    background-color: #fadbc1;
+    margin-bottom: 3.2rem;
+    padding: 1.6rem;
+    border-radius: 50%;
+}
+
+.feature-title {
+    font-size: 2.4rem;
+    color: #333;
+    font-weight: 700;
+    margin-bottom: 1.6rem;
+}
+
+.feature-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+
+/***********************************************/
+/* CTA SECTION */
+/***********************************************/
+
+.section-cta {
+    padding:9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    /*background-color: #e67e22; */
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+    border-radius: 11px;
+    background-image: linear-gradient(to right bottom,#eb984e, #e67e22);
+
+    /* temp */
+    height: 50rem;
+}
+
+
+.cta-text-box {
+
+}
+
+.cta-img-box {
+    background-image: linear-gradient(
+            to right bottom,
+        rgba(235, 151, 78, 0.2), rgba(230, 125, 34, 0.2)), 
+        url('../img/eating.jpg');
+    background-size: cover;
+    background-position: center;
+}
