--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,7 @@
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
     border-radius: 11px;
     background-image: linear-gradient(to right bottom,#eb984e, #e67e22);
+    overflow: hidden;
 
     /* temp */
     height: 50rem;
@@ -520,7 +521,8 @@
 .cta-img-box {
     background-image: linear-gradient(
             to right bottom,
-        rgba(235, 151, 78, 0.2), rgba(230, 125, 34, 0.2)), 
+        rgba(235, 151, 78, 0.2),
+        rgba(230, 125, 34, 0.2)), 
         url('../img/eating.jpg');
     background-size: cover;
     background-position: center;
