--- a/css/general.css
+++ b/css/general.css
@@ -36,12 +36,14 @@ Paragraph default: 1.6
 
 
 -Shades:
+#45260a
 
 
 -Accents:
 
 
 -Greys:
+#767676 (lightest grey allowed on #fff)
 #6f6f6f (lightest grey allowed on #fadbc1)
 #555
 #333
@@ -122,6 +124,10 @@ body {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+    grid-template-columns: repeat(5, 1fr);
+}
+
 .grid--center-v {
     align-items: center;
 }
@@ -162,6 +168,7 @@ body {
     letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link, 
 .btn:visited {
     display: inline-block;
@@ -171,6 +178,10 @@ body {
     text-decoration: none;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
+
+    border: none;
+    cursor: pointer;
+    font-family: inherit;
 
     /* Put transition on original "state" */
     /* transition: background-color 0.3s; */
@@ -201,6 +212,18 @@ body {
     
     /* trick to add border inside */
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+    background-color: #45260a;
+    color: #fadbc1;
+    align-self: end;
+    padding: 1.2rem;
+}
+
+.btn--form:hover {
+    background-color: #fff;
+    color: #555;
 }
 
 .link:link,
@@ -236,6 +259,13 @@ body {
     width: 3rem;
     height: 3rem;
     color: #e67e22;
+}
+
+*:focus {
+    outline: none;
+    /* outline: 4px dotted #e67e22;
+    outline-offset: 8px; */
+    box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 
