--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     /* Because we want header to be sticky later*/
     height: 9.6rem;
     padding: 0 4.8rem;
+    position: relative;
 }
 
 .logo {
@@ -60,6 +61,26 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
     background-color: #cf711f;
+}
+
+/* MOBILE */
+
+.btn-mobile-nav {
+    border: none;
+    background: none;
+    cursor: pointer;
+
+    display: none;
+}
+
+.icon-mobile-nav {
+    height: 4.8rem;
+    width: 4.8rem;
+    color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+    display: none;
 }
 
 
