smooth, ancor - Js: Date & mobile nav

--- a/css/queries.css
+++ b/css/queries.css
@@ -131,6 +131,7 @@ instead, 1rem = 1em = 16px */
 
     .btn-mobile-nav {
         display: block;
+        z-index: 9999;
     }
 
     .main-nav {
