--- a/css/general.css
+++ b/css/general.css
@@ -79,6 +79,10 @@ Medium: 11px
 html {
     font-size: 62.5%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+
+    /* Does NOT work on Safari */
+    /* scroll-behavior: smooth; */
 }
 
 body {
